First version of network client extension

--- a/sds011-node/sds011-node.html
+++ b/sds011-node/sds011-node.html
@@ -23,7 +23,7 @@
     <input type="text" id="node-input-name" placeholder="Name">
   </div>
   <div class="form-row">
-    <label for="node-input-port"><i class="icon-tag"></i>Device (e.g.RPi3: /dev/serial0)</label>
+    <label for="node-input-port"><i class="icon-tag"></i>Device or tcp://IP:PORT (e.g.RPi3: /dev/serial0)</label>
     <input type="text" id="node-input-port" placeholder="/dev/serial0">
   </div>
 </script>
